--- a/examples/js_focused/basic/stoplight/css/style.css
+++ b/examples/js_focused/basic/stoplight/css/style.css
@@ -34,3 +34,13 @@
 .green-stoplight.off{
     background-color: rgb(0, 50, 0);
 }
+
+#walk-sign{
+    height: 250px;
+    width: 250px;
+    object-fit: contain;
+}
+
+.columns{
+    display: flex;
+}
